Fixing up the styling and spacing of the events section

--- a/assets/scss/components/_pillars.scss
+++ b/assets/scss/components/_pillars.scss
@@ -76,6 +76,7 @@
     h3 {
       margin: 0;
       @include h4;
+      @include smooth;
       margin-bottom: 2px;
     }
 
